--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="textView_textColor">#FFFFFF</color>
     <color name="background_cardview">#33000000</color>
     <color name="textColor_White">#FFFFFF</color>
+    <color name="item_white">#FFFFFF</color>
 </resources>
