--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/buttonText"
                     android:theme="@style/RaiseButtonDark"
-                    android:layout_marginTop="@dimen/login_marginTop">
+                    android:layout_marginTop="@dimen/login_marginTop"
+                    android:onClick="login">
                 </Button>
 
                 <RelativeLayout
