--- a/app/src/main/res/layout/cardview_image.xml
+++ b/app/src/main/res/layout/cardview_image.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/imageCardView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/foto1"
@@ -27,6 +28,7 @@
             android:padding="@dimen/padding_cardview">
 
             <TextView
+                android:id="@+id/usernameCardView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/carlos_vargas_cardview"
@@ -46,6 +48,7 @@
                     android:textColor="@color/textColor_White">
                 </TextView>
                 <TextView
+                    android:id="@+id/cantidadDiasCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/dias_cardview"
@@ -67,6 +70,7 @@
                 </CheckBox>
 
                 <TextView
+                    android:id="@+id/cantidaMeGustaCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/me_gusta_cardview"
