--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,17 +7,17 @@
     tools:context=".view.fragment.HomeFragment">
 
     <include layout="@layout/appbar_toolbar"/>
-
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:paddingTop="@dimen/padding_card"
+        android:paddingLeft="@dimen/padding_card"
+        android:paddingRight="@dimen/padding_card">
 
-        <include layout="@layout/cardview_image" />
-        <include layout="@layout/cardview_image" />
+    </androidx.recyclerview.widget.RecyclerView>
 
-    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
