--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="height_bottom_navigation_view">70dp</dimen>
     <dimen name="paddingBottom_container">70dp</dimen>
     <dimen name="margin_fab">20dp</dimen>
+    <dimen name="padding_card">10dp</dimen>
 
 
 
