--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,15 @@
     <dimen name="paddingBottom_container">70dp</dimen>
     <dimen name="margin_fab">20dp</dimen>
     <dimen name="padding_card">10dp</dimen>
+    <dimen name="height_image_detail">300dp</dimen>
+    <dimen name="textView_username_image_detail">24sp</dimen>
+    <dimen name="marginTop_image_detail">10dp</dimen>
+    <dimen name="textSize_megusta_image_detail">14sp</dimen>
+    <dimen name="marginLeft_megusta_detail">5dp</dimen>
+    <dimen name="height_divider_image_detail">2dp</dimen>
+    <dimen name="textSize_title_image_detail">16sp</dimen>
+    <dimen name="paddingTop_title_image_detail">20dp</dimen>
+    <dimen name="marginEnd_fab_image_detail">20dp</dimen>
 
 
 
