--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,7 +24,21 @@
     <dimen name="textSize_title_image_detail">16sp</dimen>
     <dimen name="paddingTop_title_image_detail">20dp</dimen>
     <dimen name="marginEnd_fab_image_detail">20dp</dimen>
-
+    <dimen name="paddingTop_linearLayout_profile">200dp</dimen>
+    <dimen name="paddingBottom_linearLayout_profile">20dp</dimen>
+    <dimen name="textSize_username_profile">30dp</dimen>
+    <dimen name="size_circle_image_profile">150dp</dimen>
+    <dimen name="marginTop_circle_image_profile">40dp</dimen>
+    <dimen name="elevation_circle_image_profile">10dp</dimen>
+    <dimen name="dependTargetY_circle_image_profile">-100dp</dimen>
+    <dimen name="target_circle_image_profile">10dp</dimen>
+    <dimen name="targetSize_circle_image_profile">40dp</dimen>
+    <dimen name="textSize_username_appbar_profile">18sp</dimen>
+    <dimen name="elevation_username_appbar_profile">10dp</dimen>
+    <dimen name="marginTop_username_appbar_profile">-100dp</dimen>
+    <dimen name="dependTargetY_username_appbar_profile">-250dp</dimen>
+    <dimen name="target_username_appbar_profile">15dp</dimen>
+    <dimen name="marginLeft_username_appbar_profile">10dp</dimen>
 
 
 </resources>
