--- a/app/src/main/res/layout/activity_image_detail.xml
+++ b/app/src/main/res/layout/activity_image_detail.xml
@@ -26,7 +26,8 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:background="@drawable/foto1"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="parallax"
+                android:transitionName="@string/transitionName_imageCardView"/>
 
 
             <androidx.appcompat.widget.Toolbar
