--- a/app/src/main/res/layout/cardview_image.xml
+++ b/app/src/main/res/layout/cardview_image.xml
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/foto1"
-            android:scaleType="centerCrop">
+            android:scaleType="centerCrop"
+            android:transitionName="transitionName_imageCardView">
 
         </ImageView>
 
